<resources>
    <string name="app_name">Deuces Wild</string>

    <!--    Hands  -->
    <string name="sequential_royal_flush">Sequential Royal Flush</string>
    <string name="natural_royal_flush">Natural Royal Flush</string>
    <string name="four_deuces">Four Deuces</string>
    <string name="wild_royal_flush">Wild Royal Flush</string>
    <string name="five_of_a_kind">Five of a Kind</string>
    <string name="straight_flush">Straight Flush</string>
    <string name="four_of_a_kind">Four of a Kind</string>
    <string name="full_house">Full House</string>
    <string name="flush">Flush</string>
    <string name="straight">Straight</string>
    <string name="three_of_a_kind">Three of a Kind</string>

    <!--  Tips  -->
    <string name="training_tip_title">Training Mode Tips</string>
    <string name="training_tip_desc">- This is meant to help you practice/prep for the casino.\n\n- The cards you hold are compared to an optimal hold strategy\n\n- Consistently improving your training accuracy is a good way to increase your return in real life.</string>
    <string name="strategy_tip_title">Strategy Tips</string>
    <string name="strategy_tip_desc">- This is a learn-able checklist of 25 or so hands/partial-hands to consider\n\n- You get a different checklist based off the deuce count.\n\nThe optimal choice is shown at the bottom.</string>

    <!--  Settings  -->
    <string name="statistics">Statistics</string>
    <string name="simulations">Simulations</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="money_header">Money</string>
    <string name="general_header">General</string>
    <string name="training_strict_description">Increases strictness</string>
    <string name="payout_table_title">Payout Table</string>
    <string name="autohold_description">Autohold accuracy</string>

    <!--    Buttons -->
    <string name="deal_button">Deal</string>
    <string name="double_button">Double</string>
    <string name="bet_one_button">Bet 1</string>
    <string name="bet_max_button">Bet Max</string>
    <string name="red_button">Red</string>
    <string name="black_button">Black</string>
    <string name="collect_button">Collect</string>

    <string name="autohold">autohold</string>
    <string name="training">training</string>
    <string name="show_tips">tips</string>
    <string name="stats">stats</string>

    <!--    -->
    <string name="tap_card">Tap card to hold</string>
    <string name="tap_card_to_change">*Tap card to change</string>
    <string name="correct">Correct</string>
    <string name="correct_training">Correct: %d</string>
    <string name="wrong">Wrong</string>
    <string name="wrong_training">Wrong: %d</string>
    <string name="hold">Hold</string>
    <string name="accuracy">Accuracy: %.1f%%</string>
    <string name="winnings_pos">Your winnings: $%d</string>
    <string name="winnings_neg">Your winnings: -$%d</string>
    <string name="optimal_pos">Optimal winnings: $%d</string>
    <string name="optimal_neg">Optimal winnings: -$%d</string>
    <string name="optimal_dec_pos">Optimal expected winnings: $%.3f</string>
    <string name="optimal_dec_neg">Optimal expected winnings: -$%.3f</string>

    <!--   Bonus round stuff   -->
    <string name="bonus_correct_guess">Bonus Win!</string>
    <string name="bonus_wrong_guess">Wrong Guess!</string>
    <string name="guess_the_color">Guess the color?</string>

    <string name="bet">Bet: $%d</string>
    <string name="won">Won: $%d</string>
    <string name="loss">Lost: -$%d</string>
    <string name="total">Credits: $%d</string>
    <string name="expected_value">$%.3f</string>
    <string name="reset"><u>Reset</u></string>
    <string name="home_button">Home</string>

    <string name="deuces_wild_title">Deuces Wild</string>
    <string name="deuces_definition">Deuces Wild is a variation of video poker in which all twos are wild. (Wild cards substitute for any other card in the deck in order to make a better poker hand). In Deuces Wild, the payout for a four of a kind makes up approximately ⅓ of the payback percentage of the game, and a four of a kind occurs on average approximately every fifteen hands. Deuces Wild can be found with pay schedules that offer a theoretical return as high as 100.8 percent, when played with perfect strategy. This full-pay version is found only in Nevada. It is also available with other pay schedules that have lesser theoretical returns:\n-Wikipedia</string>
    <string name="about_analysis_title">Analysis Mode</string>
    <string name="about_analysis">Analysis mode enables the user to see the logic behind the decision making to enable learning. Simulations allow the user to run an analysis of the current hand by running 1000s of simulations involving that hand. </string>
    <string name="about_training_title">Training Mode</string>
    <string name="about_training">Compares the cards you held to an optimal hold strategy and keeps track of results. This immediate feedback from the optimal decision allows users to learn from their mistakes.</string>

    <!--   About -->
    <string name="other_apps">My Other Apps:</string>
    <string name="about_feedback_title">Feedback:</string>
    <string name="about_feedback">Found a bug? Have a cool idea? Want a new statistic feature? Email me, I love feedback/suggestions!</string>
    <string name="email_me">Email Me</string>
    <string name="about_deuces_poker">Deuces Wild is a popular video poker variant where 2s are wild. </string>

    <!--    Dialog Reset Money -->
    <string name="select_money">Select how much you want</string>
    <string name="five_thousand">$5,000</string>
    <string name="thousand">$1,000</string>
    <string name="ten_thousand">$10,000</string>
    <string name="reset_money">Reset Money</string>

    <!--    Stat fragment screen  -->
<!--    <string name="loss">Loss: -$%d</string>-->
<!--    <string name="won">Won: +$%d</string>-->
<!--    <string name="total">Total: $%d</string>-->
<!--    <string name="bet">Bet: $%d</string>-->
    <string name="eval">Eval: %s</string>
    <string name="your_accuracy">Accuracy: %.2f%%</string>
    <string name="correct_count">Correct Count: %d</string>
    <string name="wrong_count">Wrong Count: %d</string>

</resources>