<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">

        <SwitchPreferenceCompat
            app:key="sound"
            app:defaultValue="true"
            app:summaryOff="Sound is off"
            app:summaryOn="Sound is on"
            app:title="Sound" />


        <SwitchPreferenceCompat
            app:dependency="sound"
            app:key="sound_win"
            app:defaultValue="true"
            app:summaryOff="Win sound off"
            app:summaryOn="Win sound is on"
            app:title="Win Sound" />


        <SwitchPreferenceCompat
            app:dependency="sound"
            app:key="sound_lose"
            app:defaultValue="true"
            app:summaryOff="Lose sound is off"
            app:summaryOn="Lose sound is on"
            app:title="Lose Sound" />

        <SwitchPreferenceCompat
            app:dependency="sound"
            app:key="sound_flip"
            app:defaultValue="true"
            app:summaryOff="Card Flip sound is off"
            app:summaryOn="Card Flip sound is on"
            app:title="Flip Sound" />

        <SwitchPreferenceCompat
            app:dependency="sound"
            app:key="sound_bonus"
            app:defaultValue="true"
            app:summaryOff="Bonus sounds are off"
            app:summaryOn="Bonus sounds are on"
            app:title="Bonus Sound" />

        <Preference
            android:title="Choose Cardback"
            android:key="choose_cardback"
            android:summary="Resets your statistics"
            />

        <Preference
            android:title="Share Stats"
            android:key="share_stats"
            android:summary="Share your statistics"
            />

        <Preference
            android:title="Reset Stats"
            android:key="reset_stats"
            android:summary="Resets your statistics"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/money_header">

        <ListPreference
            app:defaultValue="100.76 Full Pay"
            app:entries="@array/payout_table_type_entries"
            app:entryValues="@array/payout_table_type_entries"
            app:key="payout_table"
            app:title="@string/payout_table_title"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:title="Reset Money"
            android:key="reset_money"
            android:summary="Resets your money to the default (4000)"
            />

    </PreferenceCategory>

</PreferenceScreen>